--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@lit-protocol/auth-helpers": "^7.0.1",
+    "@lit-protocol/constants": "^7.0.1",
+    "@lit-protocol/contracts-sdk": "^7.0.1",
+    "@lit-protocol/lit-node-client": "^7.0.1",
+    "@lit-protocol/types": "^7.0.1",
+    "@supabase/supabase-js": "^2.47.2",
+    "bs58": "^6.0.0",
     "dotenv": "^16.4.7",
     "ethers": "5.7.0",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "siwe": "^2.3.2",
+    "twitter-api-sdk": "^1.2.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
