--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@lit-protocol/types": "^7.0.1",
     "@supabase/supabase-js": "^2.47.2",
     "bs58": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ethers": "5.7.0",
     "express": "^4.21.2",
@@ -26,11 +27,13 @@
     "twitter-api-sdk": "^1.2.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.1",
     "concurrently": "^9.1.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
-  }
+  },
+  "packageManager": "pnpm@9.14.1+sha512.7f1de9cffea40ff4594c48a94776112a0db325e81fb18a9400362ff7b7247f4fbd76c3011611c9f8ac58743c3dc526017894e07948de9b72052f874ee2edfdcd"
 }
