--- a/agent/package.json
+++ b/agent/package.json
@@ -13,16 +13,20 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=\\.test\\.ts$ --testPathIgnorePatterns=\\.int\\.test\\.ts$",
     "test:int": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=\\.int\\.test\\.ts$",
     "lint": "eslint src",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "dev": "npx tsc && node dist/src/index.js"
   },
   "dependencies": {
+    "@jest/globals": "^29.7.0",
     "@langchain/anthropic": "^0.3.1",
     "@langchain/community": "^0.3.1",
     "@langchain/core": "^0.3.3",
     "@langchain/langgraph": "^0.2.8",
     "aptos": "^1.21.0",
     "axios": "^1.7.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.21.2",
     "langchain": "^0.3.2",
     "redis": "^4.7.0",
     "viem": "^2.21.53"
@@ -32,7 +36,9 @@
     "@eslint/js": "^9.9.1",
     "@tsconfig/recommended": "^1.0.7",
     "@types/axios": "^0.14.4",
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.3",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^22.10.1",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
@@ -45,6 +51,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
