wip: get balance lit action
Signed-off-by: Gita Alekhya Paul <54375111+gitaalekhyapaul@users.noreply.github.com>

--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "ethers": "5.7.0",
     "express": "^4.21.2",
     "form-data": "^4.0.1",
+    "grammy": "^1.33.0",
     "siwe": "^2.3.2",
     "twitter-api-sdk": "^1.2.1"
   },
