--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "actions"]
 	path = actions
 	url = https://github.com/gitaalekhyapaul/supranova-actions
+[submodule "supra-sdk"]
+	path = supra-sdk
+	url = https://github.com/Srivastava57Harsh/supra-sdk
