feat: add supranova twitter bot
Signed-off-by: Gita Alekhya Paul <54375111+gitaalekhyapaul@users.noreply.github.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "supra-contracts"]
 	path = supra-contracts
 	url = https://github.com/Srivastava57Harsh/supra-contracts
+[submodule "supranova-twitter-bot"]
+	path = supranova-twitter-bot
+	url = https://github.com/ankit7241/supranova-twitter-bot
